# digital-card

./: .gitignore  README.md  pyproject.toml  render.yaml
app/: __init__.py  db_mongo.py  deps.py  device.py  main.py  registry.py  walletwallet_client.py  walletwallet_payload.py
app/routers/: passes.py  pwa.py  settings.py
frontend/: README.md  index.html  manifest.json  package-lock.json  package.json  sw.js
